# AgentCLI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  setup_env.sh  todo_api.py
.agentcli/chromadb/: chroma.sqlite3
.agentcli/metrics/: session_metrics.json
.agentcli/search_index/: chroma.sqlite3
agentcli/: __init__.py
agentcli/cli/: __init__.py  main.py  repl_terminal.py
agentcli/cli/commands/: __init__.py  apply.py  ask.py  delete.py  explain.py  fix.py  gen.py  index.py  llm_config.py  metrics.py  plan.py  rollback.py  search.py  status.py
agentcli/core/: __init__.py  azure_llm.py  background_indexer.py  cache_manager.py  chroma_indexer.py  config.py  enhanced_search.py  exceptions.py  executor.py  file_ops.py  file_watcher.py  fix_manager.py  intelligent_patcher.py  llm_service.py  logger.py  patch_engine.py  planner.py  search.py  simple_search.py  structure_provider.py  text_search.py  validator.py
agentcli/core/analysis/: __init__.py  code_summarizer.py  models.py  module_analyzer.py  output_formatter.py
agentcli/core/chunkers/: ast_function_chunker.py
agentcli/core/fixmanager/: __init__.py  context_builder.py  dependency_analyzer.py  fix_manager.py  models.py  structure_analyzer.py
agentcli/core/performance/: __init__.py  analytics.py  collector.py  models.py  monitoring.py
agentcli/core/search/: __init__.py  chunker.py  embedder.py  factory.py  formatters.py  semantic_search.py  text_search.py  vector_store.py
agentcli/core/search/interfaces/: __init__.py  chunker.py  embedder.py  search_service.py  vector_store.py
agentcli/core/search/parsers/: __init__.py  python_parser.py  utils.py
agentcli/schemas/: __init__.py  plan_schema.py
agentcli/utils/: __init__.py  helpers.py  logging.py
csv_utility/examples/: example_usage.py
examples/: azure_llm_example.py  azure_openai_direct.py  llm_services_example.py
models/: crud.py  storage.py
scripts/: build_parsers.py  test_chunker.py
tests/: test_todo_api.py
