[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentcli"
version = "0.1.0"
description = "AgentCLI - a developer tool for autonomous code operations in Python"
authors = ["NorthDice"]
readme = "README.md"
packages = [{include = "agentcli"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.0"
rich = "^13.0.0"
python-dotenv = "^1.0.0"
openai = "^1.0.0"
chromadb = "^0.4.0"
sentence-transformers = "^2.2.0"
tree-sitter = "^0.20.0"
tree-sitter-python = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.group.web.dependencies]
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
flask = "^2.3.0"

[tool.poetry.scripts]
agentcli = "agentcli.cli.main:cli"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
